--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://your-api-base-url
+VITE_API_BASE_URL=https://pcapi-xiaotuxian-front-devtest.itheima.net
 VITE_API_TIMEOUT=5000 
